<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:paddingLeft="5dp">

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/category"
                android:textColor="#FF8800"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/separator"
                android:textColor="#FF8800"/>

        <TextView
                android:id="@+id/category"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/description"
                android:textStyle="bold|italic"
                android:textColor="#FF8800"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/separator"
                android:textStyle="bold|italic"
                android:textColor="#FF8800"/>

        <TextView
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:textStyle="bold|italic"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/student"
                android:textColor="#FF8800"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/separator"
                android:textColor="#FF8800"/>

        <TextView
                android:id="@+id/student"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/coworker"
                android:textColor="#FF8800"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/separator"
                android:textColor="#FF8800"/>

        <TextView
                android:id="@+id/coworker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/guest"
                android:textColor="#FF8800"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/separator"
                android:textColor="#FF8800"/>

        <TextView
                android:id="@+id/guest"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rating"
                android:textColor="#FF8800"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/separator"
                android:textColor="#FF8800"/>

        <TextView
                android:id="@+id/rating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dp">

        <ImageView
                android:id="@+id/image"
                android:layout_height="250dp"
                android:layout_width="250dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/imageDescription"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>